Fix hide code behind gutter

--- a/src/main.css
+++ b/src/main.css
@@ -85,5 +85,5 @@ a {
 */
 
 .cm-gutters {
-  background-color: inherit !important;
+  background-color: #f7f3ea !important;
 }
